phase 2 specification + docs

--- a/specification/ISMIRtemplate.bib
+++ b/specification/ISMIRtemplate.bib
@@ -1,42 +1,205 @@
-% Example bibtex file for ISMIR Template
-
-@INPROCEEDINGS{ISMIR17Author:01,
-        AUTHOR = {A. Author and B. Author},
-        TITLE = {The title of the conference paper},
-        BOOKTITLE = {Proc. of the 18th Int. Society for Music Information Retrieval Conf.},
-        PAGES = {111--117},
-        YEAR = {2017},
-        ADDRESS = {Suzhou, China}
-        }
-
-
-@BOOK{Book20Person:01,
-	AUTHOR = {O. Person},
-	TITLE = {Title of the Book},
-	PUBLISHER = {McGill-Queen's University Press},
-	YEAR = {2021},
-        ADDRESS = {Montr\'{e}al, Canada}
-	}
-
-@INCOLLECTION{Chapter09Person:01,
-        AUTHOR = {F. Person and S. Person},
-        TITLE = {Title of a chapter this book},
-        BOOKTITLE = {A Book Containing Delightful Chapters},
-        EDITOR = {A. G. Editor},
-        ADDRESS = {Tokyo, Japan},
-        PUBLISHER = {The Publisher},
-        PAGES = {58--102},
-        YEAR = {2009}
+@unpublished{doyle2025,
+    author = {I. Doyle and A. Klassen and E. Larmer},
+    title = {Project Specification for CSC 475 2025: TransVox},
+    note = 
 }
 
-@ARTICLE{JNMR10Someone:01,
-	AUTHOR = {A. Someone and B. Someone and C. Someone},
-	TITLE = {The Title of the Journal Paper},
-	JOURNAL = {Journal of New Music Research},
-	VOLUME = {A},
-	NUMBER = {B},
-	PAGES = {111--222},
-	YEAR = {2010},
-        MONTH = {September},
-	}
+@article{oates2023,
+    title = {Gender-Affirming Voice Training for Trans Women: Effectiveness of Training on Patient-Reported Outcomes and Listener Perceptions of Voice},
+    author = {Jennifer Oates and Maria S{\"o}dersten and Sterling Quinn and Ulrika Nygren and Georgia Dacakis and Victoria Kelly and Georgina Smith and Anders Sand},
+    journal = {Journal of Speech, Language, and Hearing Research},
+    volume = {66},
+    number = {11},
+    pages  = {4206--4235},
+    year = {2023},
+    doi = {10.1044/2023\_JSLHR-23-00258},
+    URL = {https://pubs.asha.org/doi/abs/10.1044/2023_JSLHR-23-00258},
+    eprint = {https://pubs.asha.org/doi/pdf/10.1044/2023_JSLHR-23-00258}
+}
+
+@article{oates2019,
+    title={Evidence-based practice in voice training for trans women},
+    author={J. Oates and R. Adler and S. Hirsch and J. Pickering},
+    journal={Voice and communication therapy for the transgender/gender diverse client: A comprehensive clinical guide},
+    pages={87--103},
+    year={2019},
+    publisher={Plural}
+}
+
+@article{leyns2021,
+    author={Clara Leyns and Tine Papeleu and Peter Tomassen and Guy T’Sjoen and Evelien D’haeseleer},
+    title={Effects of speech therapy for transgender women: A systematic review},
+    journal={International Journal of Transgender Health},
+    volume={22},
+    number={4},
+    pages={360--380},
+    year={2021},
+    publisher={Taylor \& Francis},
+    doi={10.1080/26895269.2021.1915224},
+    note={PMID: 37808532},
+    URL={https://doi.org/10.1080/26895269.2021.1915224},
+    eprint={https://doi.org/10.1080/26895269.2021.1915224}
+}
+
+# online community
+@mastersthesis{kowalchuck2020,
+    author={Talia Mykolovna Kowalchuk},
+    title={What Trans* Folks Talk About When They Talk About Voice: Learning About Voice Feminization on Reddit},
+    school={Dalhousie University},
+    year={2020},
+    month={June},
+    address={Halifax, Nova Scotia}
+}
+
+@article{ahmed2022,
+    title ={‘This app can help you change your voice’: Authenticity and authority in mobile applications for transgender voice training},
+    author = {Alex A Ahmed and Levin Kim and Anna L Hoffmann},
+    journal = {Convergence},
+    volume = {28},
+    number = {5},
+    pages = {1283--1302},
+    year = {2022},
+    doi = {10.1177/13548565221079459},
+    URL = {https://doi.org/10.1177/13548565221079459},
+    eprint = {https://doi.org/10.1177/13548565221079459}
+}
+
+@article{coleman2022,
+    title={Standards of Care for the Health of Transgender and Gender Diverse People, Version 8},
+    author={E. Coleman and A. E. Radix and W. P. Bouman and G. R. Brown and A. L. C. de Vries and M. B. Deutsch and R. Ettner and L. Fraser and M. Goodman and J. Green and A. B. Hancock and T. W. Johnson and D. H. Karasic and G. A. Knudson and S. F. Leibowitz and H. F. L. Meyer-Bahlburg and S. J. Monstrey and J. Motmans and L. Nahata and T. O. Nieder and S. L. Reisner and C. Richards and L. S. Schechter and V. Tangpricha and A. C. Tishelman and M. A. A. Van Trotsenburg and S. Winter and K. Ducheny and N. J. Adams and T. M. Adrián and L. R. Allen and D. Azul and H. Bagga and K. Başar and D. S. Bathory and J. J. Belinky and D. R. Berg and J. U. Berli and R. O. Bluebond-Langner and M.-B. Bouman and M. L. Bowers and P. J. Brassard and J. Byrne and L. Capitán and C. J. Cargill and J. M. Carswell and S. C. Chang and G. Chelvakumar and T. Corneil and K. B. Dalke and G. De Cuypere and E. de Vries and M. Den Heijer and A. H. Devor and C. Dhejne and A. D’Marco and E. K. Edmiston and L. Edwards-Leeper and R. Ehrbar and D. Ehrensaft and J. Eisfeld and E. Elaut and L. Erickson-Schroth and J. L. Feldman and A. D. Fisher and M. M. Garcia and L. Gijs and S. E. Green and B. P. Hall and T. L. D. Hardy and M. S. Irwig and L. A. Jacobs and A. C. Janssen and K. Johnson and D. T. Klink and B. P. C. Kreukels and L. E. Kuper and E. J. Kvach and M. A. Malouf and R. Massey and T. Mazur and C. McLachlan and S. D. Morrison and S. W. Mosser and P. M. Neira and U. Nygren and J. M. Oates and J. Obedin-Maliver and G. Pagkalos and J. Patton and N. Phanuphak and K. Rachlin and T. Reed and G. N. Rider and J. Ristori and S. Robbins-Cherry and S. A. Roberts and K. A. Rodriguez-Wallberg and S. M. Rosenthal and K. Sabir and J. D. Safer and A. I. Scheim and L. J. Seal and T. J. Sehoole and K. Spencer and C. St. Amand and T. D. Steensma and J. F. Strang and G. B. Taylor and K. Tilleman and G. G. T’Sjoen and L. N. Vala and N. M. Van Mello and J. F. Veale and J. A. Vencill and B. Vincent and L. M. Wesp and M. A. West and J. Arcelus},
+    journal={International Journal of Transgender Health},
+    volume={23},
+    number={sup1},
+    pages={S137--S142},
+    year={2022},
+    publisher={Taylor \& Francis},
+    doi={10.1080/26895269.2022.2100644},
+    url={https://doi.org/10.1080/26895269.2022.2100644}
+}
+
+@article{davies2015,
+    title={Voice and Communication Change for Gender Nonconforming Individuals: Giving Voice to the Person Inside},
+    author={Shelagh Davies and Viktória G. Papp and Christella Antoni},
+    journal={International Journal of Transgenderism},
+    volume={16},
+    number={3},
+    pages={117--159},
+    year={2015},
+    publisher={Taylor \& Francis},
+    doi={10.1080/15532739.2015.1075931},
+    URL={https://doi.org/10.1080/15532739.2015.1075931},
+    eprint={ https://doi.org/10.1080/15532739.2015.1075931}
+}
+
+@misc{devextras2018,
+    title = {Voice Tools},
+    author = {DevExtras},
+    url = {https://devextras.com/voicetools},
+    note = {Accessed: August 19, 2025},
+    year = 2018
+}
+
+@misc{nitzandseek2020,
+    title = {Voice Pitch Analyzer},
+    author = {C. Nitz and D. Seek},
+    url = {https://voicepitchanalyzer.app},
+    note = {Accessed: August 19, 2025},
+    year = 2020
+}
+
+@misc{speechtools2013,
+    title = {Christella VoiceUp},
+    author = {SpeechTools},
+    url = {https://www.christellaantoni.co.uk/transgender-voice/voiceupapp/},
+    note = {Accessed: August 19, 2025},
+    year = 2013
+}
+
+@article{ohlsson2024,
+    title={Voice Therapy Outcome: A Comparison Between Imitation Model Voice Therapy and Verbal Instructions Model Voice Therapy},
+    author={Ann-Christine Ohlsson and Ying Li and Inger Gustavsson and Kerstin Hofling and Ulrika Wahle and Claes {\"O}sterlind and Jenny Iwarsson},
+    journal={Journal of Voice},
+    volume={38},
+    number={4},
+    pages={903--910},
+    year={2024},
+    publisher={Elsevier},
+    doi = {10.1016/j.jvoice.2022.01.018},
+    url = {https://www.sciencedirect.com/science/article/pii/S0892199722000194},
+}
+
+@misc{li2022,
+    title={FreeVC: Towards High-Quality Text-Free One-Shot Voice Conversion}, 
+    author={Jingyi Li and Weiping Tu and Li Xiao},
+    year={2022},
+    eprint={2210.15418},
+    archivePrefix={arXiv},
+    primaryClass={cs.SD},
+    url={https://arxiv.org/abs/2210.15418}, 
+}
+
+@misc{mozilla2025,
+    title={Common Voice Corpus},
+    author={Mozilla},
+    url={https://commonvoice.mozilla.org/en/datasets},
+    year={2025},
+    note={Acessed: August 19, 2025}
+}
+
+@misc{github,
+    title = {timb-re-synthesis},
+    author = {Isaiah Doyle and Aileen Klassen and Elijah Larmer},
+    howpublished = {github.com},
+    url = {https://github.com/isaiahdoyle/timb-re-synthesis},
+    note = {Accessed: August 19, 2025}
+}
+
+@article{kingma2013,
+  title={Auto-encoding variational bayes},
+  author={Diederik P Kingma and Max Welling},
+  journal={ICLR},
+  year={2013}
+}
+
+@inproceedings{sohn2015,
+    booktitle = {Advances in Neural Information Processing Systems},
+    author={Kihyuk Sohn and Honglak Lee and Xinchen Yan},
+    editor = {C. Cortes and N. Lawrence and D. Lee and M. Sugiyama and R. Garnett},
+    publisher={Curran Associates, Inc.},
+    title={Learning Structured Output Representation using Deep Conditional Generative Models},
+    url={https://proceedings.neurips.cc/paper_files/paper/2015/file/8d55a249e6baa5c06772297520da2051-Paper.pdf},
+    volume={28},
+    year={2015}
+}
+
+@misc{sigurgeirsson2024,
+    title={Just Because We Camp, Doesn't Mean We Should: The Ethics of Modelling Queer Voices}, 
+    author={Atli Sigurgeirsson and Eddie L. Ungless},
+    year={2024},
+    eprint={2406.07504},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2406.07504}, 
+    doi={10.48550/arXiv.2406.07504}
+}
+
+@book{tvt2012,
+    title={Transrespect versus Transphobia Worldwide : A Comparative Review of the Human-rights Situation of Gender-variant/Trans People},
+    editor={Carsten Balzer and Jan Simon Hutta},
+    series={TvT Publication Series},
+    address={Berlin},
+    volume={6},
+    year={2012},
+    url={http://transrespect.org/wp-content/uploads/2015/08/TvT\%5fresearch-report.pdf},
+    note={Accessed: August 19, 2025}
+}
+
+@techreport{hrc2024,
+    title={The National State of Emergency Facing the Transgender Community in the United States},
+    institution={Human Rights Campaign Foundation},
+    year={2024},
+    month={November},
+    url={https://reports.hrc.org/an-epidemic-of-violence-2024},
+    note={Accessed: August 19, 2025}
+}
 
